# HomeOffer

./: .env.example  README.md  docker-compose.local.yml  docker-compose.yml  nginx.conf
backend/: pyproject.toml
backend/api/: .dockerignore  .env.example  .gitignore  Dockerfile  main.py  pyproject.toml
backend/api/src/: logger.py
backend/api/src/api/: api_router.py
backend/api/src/api/v1/: __init__.py  browse.py  v1_router.py
backend/api/src/config/: config.py
backend/api/src/core/: __init__.py
backend/api/src/core/broker/: __init__.py  rabbitmq.py
backend/api/src/schemas/: __init__.py  browse.py
backend/consumer/: Dockerfile  main.py  pyproject.toml
backend/consumer/src/: __init__.py
backend/consumer/src/config/: __init__.py  config.py
backend/consumer/src/core/: __init__.py
backend/consumer/src/core/broker/: __init__.py  rabbitmq.py
backend/consumer/src/services/avito_service/: __init__.py  avito_handler.py  avito_worker.py
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/features/: index.ts
frontend/src/features/flatForm/: FlatForm.tsx  index.ts  schema.ts  static.ts  types.ts
frontend/src/features/flatForm/adapters/: CheckboxFieldAdapter.tsx  RadioGroupFieldAdapter.tsx  TextFieldAdapter.tsx  index.ts  types.ts
frontend/src/layouts/: MainPageLayout.tsx  index.ts  types.ts
frontend/src/pages/: MainPage.tsx  index.ts  types.ts
frontend/src/shared/: index.ts  validationLocale.ts
